--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
 
         <h2>Question 0:</h2>
-        <p>Status of JS page Connected: <span id="q0" class="status-bad">NOT connected properly</span>
+        <p>Status of JS page Connected: <span id="q0" class="status-good">NOT connected properly</span>
         </p>
         <hr>
 
@@ -29,7 +29,7 @@
         <p><span id="q1"></span>
         </p>
         <hr>
-        
+
 
         <h2>Question 2:</h2>
         <p><span id="q2"></span>
@@ -120,10 +120,10 @@
         <h2>Question 18:</h2>
         <p><span id="q18"></span></p>
         <hr>
-     
+
 
     </main>
 
 </body>
-
+<script src="main.js"></script>
 </html>
